--- a/app/src/main/res/layout/index_layout.xml
+++ b/app/src/main/res/layout/index_layout.xml
@@ -43,4 +43,10 @@
         android:text="DreamView"
         android:onClick="DreamClick"
         />
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" 
+        android:text="MatrixView"
+        android:onClick="MatrixClick"
+        />
 </LinearLayout>
