--- a/app/src/main/res/layout/index_layout.xml
+++ b/app/src/main/res/layout/index_layout.xml
@@ -61,4 +61,10 @@
         android:text="WaterView"
         android:onClick="WaterClick"
         />
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" 
+        android:text="LayerView"
+        android:onClick="LayerClick"
+        />
 </LinearLayout>
