--- a/app/src/main/res/layout/index_layout.xml
+++ b/app/src/main/res/layout/index_layout.xml
@@ -67,4 +67,10 @@
         android:text="LayerView"
         android:onClick="LayerClick"
         />
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" 
+        android:text="PageTurnView"
+        android:onClick="PageTurnClick"
+        />
 </LinearLayout>
