--- a/app/src/main/res/layout/index_layout.xml
+++ b/app/src/main/res/layout/index_layout.xml
@@ -73,4 +73,10 @@
         android:text="PageTurnView"
         android:onClick="PageTurnClick"
         />
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" 
+        android:text="FoldView"
+        android:onClick="FoldClick"
+        />
 </LinearLayout>
