--- a/app/src/main/res/layout/index_layout.xml
+++ b/app/src/main/res/layout/index_layout.xml
@@ -45,8 +45,14 @@
         />
     <Button
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" 
+        android:layout_height="wrap_content"
         android:text="MatrixView"
         android:onClick="MatrixClick"
+        />
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="DragView"
+        android:onClick="DragClick"
         />
 </LinearLayout>
