--- a/app/src/main/res/layout/index_layout.xml
+++ b/app/src/main/res/layout/index_layout.xml
@@ -1,52 +1,107 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    >
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="20dip"
+        >
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" 
-        android:text="CircleView"
-        android:onClick="CircleClick"
-        />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="CircleView"
+            android:onClick="CircleClick"
+            />
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" 
-        android:text="TextCusView"
-        android:onClick="TextCusClick"
-        />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="TextCusView"
+            android:onClick="TextCusClick"
+            />
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" 
-        android:text="HeartView"
-        android:onClick="HeartClick"
-        />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="HeartView"
+            android:onClick="HeartClick"
+            />
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" 
-        android:text="ShaderView"
-        android:onClick="ShaderClick"
-        />
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" 
-        android:text="GirlView"
-        android:onClick="GirlClick"
-        />
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" 
-        android:text="DreamView"
-        android:onClick="DreamClick"
-        />
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" 
-        android:text="MatrixView"
-        android:onClick="MatrixClick"
-        />
-</LinearLayout>
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="ShaderView"
+            android:onClick="ShaderClick"
+            />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="GirlView"
+            android:onClick="GirlClick"
+            />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="DreamView"
+            android:onClick="DreamClick"
+            />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="MatrixView"
+            android:onClick="MatrixClick"
+            />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="MultiCircleView"
+            android:onClick="MultiCircleClick"
+            />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="WaterView"
+            android:onClick="WaterClick"
+            />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="LayerView"
+            android:onClick="LayerClick"
+            />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="PageTurnView"
+            android:onClick="PageTurnClick"
+            />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="FoldView"
+            android:onClick="FoldClick"
+            />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="TestCanvasView"
+            android:onClick="TestClick"
+            />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="IconMeasureView"
+            android:onClick="IconMeasureClick"
+            />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="AnimotionTest"
+            android:onClick="AnimoClick"
+            />
+    </LinearLayout>
+</ScrollView>
